# rvb_mpc

./: .gitignore  CMakeLists.txt  README.md  clone_dependencies.sh  package.xml
cmake_modules/: FindACADO.cmake
launch/: IBVS.launch  gimbal_identification.m  image_extraction.launch  random_flight.launch  spawn_scene.launch  spawn_uav.launch  uav_controllers.yaml  usb_cam_video_recording.launch
log_output_folder/: README.txt
log_output_folder/plot_libs/: Plot_comp_time.m  plot_trajectory.m  plotcube.m  quat2rot.m  triad.m  v2t.m
models/: horizontal_obst_1.urdf  horizontal_obst_2.urdf  vertical_obst_1.urdf  vertical_obst_2.urdf  vertical_obst_3.urdf  vertical_obst_4.urdf  vertical_obst_5.urdf  vertical_obst_6.urdf  vertical_obst_7.urdf
models/apriltag/: apriltag.urdf  marker.material
models/tnt_crate/: TNT.material  dynamic_obst_1.urdf
parameters/: display.rviz  mavGuiParams.yaml  params_short_term.yaml  rvb.rviz
src/: CMakeLists.txt
src/AprilTags/: CMakeLists.txt  Edge.cc  GrayModel.cc  Quad.cc  TagDetector.cc  TagDetector.h  TagFamily.h
src/assimp_loader/: CMakeLists.txt  camera.h  mesh.h  model.h  shader.h
src/assimp_loader/assets/shaders/: modelTextured.fsh  modelTextured.vs  modelTextured.vsh
src/assimp_loader/assets/zeppelin/: ZEPLIN_OBJ.mtl
src/assimp_loader/assets/zeppelin/Texture/: zep_transparent.psd
src/base_ibvs_controller/: CMakeLists.txt  base_IBVS_controller.cpp  base_IBVS_controller.h  conversions.hpp  utils.hpp
src/gui/: CMakeLists.txt  base_imgui.h  dynObstacle.cpp  dynObstacle.h  mav_imgui.cpp  mav_imgui.h
src/gui/imgui/: CMakeLists.txt  gl3w.c  imgui.cpp  imgui.h  imgui_addons.cpp  imgui_addons.h  imgui_impl_glfw_gl3.cpp  imgui_internal.h
src/local_planner_solver/: CMakeLists.txt  SHERPA_local_planner.cpp  SHERPA_local_planner.h  local_planner_solver_ACADO_SHERPA.cpp  local_planner_solver_ACADO_SHERPA_LINEARIZED_TEST.cpp  local_planner_solver_ACADO_SHERPA_TEST.cpp
src/local_planner_solver/core/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/nodes/: CMakeLists.txt  IBVS_controller_node.cpp  IBVS_controller_node.h  IBVS_random_controller_node.cpp  IBVS_random_controller_node.h  assimp_node.cpp  randomObjectSpawner.cpp  randomObjectSpawner.h
src/short_term_solver/: CMakeLists.txt  STIVS_controller.cpp  STIVS_controller.h  renamingScript.sh  short_term_solver_ACADO  short_term_solver_ACADO.cpp  short_term_solver_ACADO_SHERPA.cpp  short_term_solver_ACADO_test  short_term_solver_ACADO_test.cpp
src/short_term_solver/core/: acado_auxiliary_functions.c  acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  test.c
