<?xml version="1.0"?>
<package format="2">
  <name>rvb_mpc</name>
  <version>1.0.0</version>
  <description>	The Robust Vision-Based Model Predictive Control package </description>

  <maintainer email="potena@diag.uniroma1.it">Ciro Potena</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rm3_ackermann_controller</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rm3_ackermann_controller</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>


  <exec_depend>image_transport</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rm3_ackermann_controller</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <export>
  </export>
</package>
