# add_library(object_spawner_lib randomObjectSpawner.cpp)
# target_link_libraries(object_spawner_lib local_planner_solver_lib )

# add_executable(IBVS_random_controller_node IBVS_random_controller_node.cpp )
# add_dependencies(IBVS_random_controller_node ${catkin_EXPORTED_TARGETS})
# target_link_libraries(IBVS_random_controller_node object_spawner_lib mav_imgui_library  )